@@ -2,6 +2,8 @@ Revision history for App-duino
 
 {{$NEXT}}
 
+ - Use picocom, instead of the built-in terminal, if installed
+
 0.09      2013-05-10 16:57:29 Europe/Rome
 
  - Also remove .build if empty on "duino clean"
